# virgil-crypto

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Dockerfile_Golang  Jenkinsfile  LICENSE  README.md  VERSION  _polarssl_exception_8h_source.html  _virgil_asn1_compatible_8h_source.html  _virgil_asn1_reader_8h_source.html  _virgil_asn1_writer_8h_source.html  _virgil_asymmetric_cipher_8h_source.html  _virgil_base64_8h_source.html  _virgil_byte_array_8h_source.html  _virgil_c_m_s_content_8h_source.html  _virgil_c_m_s_content_info_8h_source.html  _virgil_c_m_s_encrypted_content_8h_source.html  _virgil_c_m_s_enveloped_data_8h_source.html  _virgil_c_m_s_key_trans_recipient_8h_source.html  _virgil_c_m_s_password_recipient_8h_source.html  _virgil_chunk_cipher_8h_source.html  _virgil_cipher_8h_source.html  _virgil_cipher_base_8h_source.html  _virgil_crypto_exception_8h_source.html  _virgil_custom_params_8h_source.html  _virgil_data_sink_8h_source.html  _virgil_data_source_8h_source.html  _virgil_hash_8h_source.html  _virgil_k_d_f_8h_source.html  _virgil_key_pair_8h_source.html  _virgil_key_pair_generator_8h_source.html  _virgil_o_i_d_8h.html  _virgil_o_i_d_8h_source.html  _virgil_p_b_e_8h_source.html  _virgil_random_8h_source.html  _virgil_signer_8h_source.html  _virgil_stream_cipher_8h_source.html  (+248 more)
cli/: CMakeLists.txt  ChangeLog
cli/include/cli/: pair.h  pki.h  version.h
cli/src/: utils.cxx  utils.h  version.cxx  version.h  virgil.cxx  virgilcertinfo.cxx  virgildecrypt.cxx  virgilencrypt.cxx  virgilkey2pub.cxx  virgilkeygen.cxx  virgilpub2cert.cxx  virgilsign.cxx  virgilverify.cxx
cli/src/commands/: virgil.cxx  virgiladduser.cxx  virgilcertinfo.cxx  virgildecrypt.cxx  virgilencrypt.cxx  virgilkey2pub.cxx  virgilkeygen.cxx  virgilpub2cert.cxx  virgilsign.cxx  virgilverify.cxx
cli/src/common/: pair.cxx  version.cxx
cli/src/pki/: pki.cxx
cli/utils/: export_man.sh  test_cli.sh
lib/: CMakeLists.txt  Doxyfile.in  Info.plist.in  mainpage.dox
lib/cmake/: config.cmake.in  json.cmake  rapidjson.cmake
lib/include/: CMakeLists.txt
lib/include/virgil/: VirgilByteArray.h  VirgilChunkCipher.h  VirgilCipher.h  VirgilCipherBase.h  VirgilDataSink.h  VirgilDataSource.h  VirgilException.h  VirgilKeyPair.h  VirgilSigner.h  VirgilStreamCipher.h  VirgilStreamSigner.h  VirgilVersion.h  VirgilVersion.h.in
lib/jsoncpp/: jsoncpp_ext.cmake
lib/mbedtls/: mbedtls.cmake  mbedtls_ext.cmake
lib/mbedtls/configs/: config.h  config_as3.h
lib/mbedtls/configure/: configure.py
lib/mbedtls/patch/: patch.py
lib/polarssl/: polarssl_ext.cmake
lib/polarssl/bundle/: polarssl-1.3.8-gpl.tgz
lib/polarssl/patch/: asn1write.c.patch  ecies.c  ecies.h  kdf1.c  kdf1.h  oid.c.patch  oid.h.patch  patch.py  patch_config_all.yml  patch_config_as3.yml
lib/rapidjson/: rapidjson.cmake
lib/src/: PolarsslException.cxx  ScopeGuard.h  VirgilAccount.cxx  VirgilAccountId.cxx  VirgilAsn1Alg.cxx  VirgilAsn1Alg.h  VirgilAsn1Compatible.cxx  VirgilAsn1DataMarshaller.cxx  VirgilAsn1Reader.cxx  VirgilAsn1Writer.cxx  VirgilAsymmetricCipher.cxx  VirgilBase64.cxx  VirgilByteArray.cxx  VirgilByteArrayUtils.cxx  VirgilCMSContent.cxx  VirgilCMSContentInfo.cxx  VirgilCMSEncryptedContent.cxx  VirgilCMSEnvelopedData.cxx  VirgilCMSKeyTransRecipient.cxx  VirgilCMSPasswordRecipient.cxx  VirgilCertificate.cxx  VirgilCertificateId.cxx  VirgilChunkCipher.cxx  VirgilCipher.cxx  VirgilCipherBase.cxx  VirgilConfig.cxx  VirgilConfig.h.in  VirgilContentInfo.cxx  VirgilContentInfoFilter.cxx  VirgilContentInfoFilter.h  VirgilCryptoError.cxx  VirgilCryptoException.cxx  VirgilCustomParams.cxx  VirgilDataSink.cxx  VirgilException.cxx  VirgilHKDF.cxx  VirgilHash.cxx  VirgilId.cxx  VirgilInfoTicket.cxx  VirgilInfoTicketType.cxx  (+38 more)
lib/src/pfs/: VirgilPFS.cxx  VirgilPFSEncryptedMessage.cxx  VirgilPFSInitiatorPrivateInfo.cxx  VirgilPFSInitiatorPublicInfo.cxx  VirgilPFSPrivateKey.cxx  VirgilPFSPublicKey.cxx  VirgilPFSResponderPrivateInfo.cxx  VirgilPFSResponderPublicInfo.cxx  VirgilPFSSession.cxx
lib/src/platform/: VirgilStreamDataSink.cxx  VirgilStreamDataSource.cxx
lib/src/primitive/: VirgilOperationCipher.cxx  VirgilOperationDH.cxx  VirgilOperationHash.cxx  VirgilOperationKDF.cxx  VirgilOperationRandom.cxx
lib/src/pythia/: VirgilPythia.cxx  VirgilPythiaContext.cxx  VirgilPythiaError.cxx  virgil_pythia_c.cxx
lib/src/stream/: VirgilBytesDataSink.cxx  VirgilBytesDataSource.cxx  VirgilStreamDataSink.cxx  VirgilStreamDataSource.cxx  utils.cxx
tests/: CMakeLists.txt  catch.hpp  deterministic_keys.h  rsa_keys.h  test_asn1_writer.cxx  test_asymmetric_cipher.cxx  test_base64.cxx  test_byte_array_utils.cxx  test_chunk_cipher.cxx  test_cipher.cxx  test_cipher_base.cxx  test_contract_copy_move.cxx  test_data_pfs.h  test_hash.cxx  test_hkdf.cxx  test_key_pair.cxx  test_pbe.cxx  test_pbkdf.cxx  test_pfs.cxx  test_pythia.cxx  test_random.cxx  test_runner.cxx  test_seq_cipher.cxx  test_seq_signer.cxx  test_signer.cxx  test_stream_cipher.cxx  test_stream_data_source.cxx  test_symmetric_cipher.cxx  test_tag_filter.cxx  test_tiny_cipher.cxx  util.hpp
tests/data/: test_data_pfs_with_otc.json  test_data_pfs_without_otc.json
wrappers/: CMakeLists.txt
wrappers/as3/: CMakeLists.txt
wrappers/as3/demo/: CMakeLists.txt  EncryptApp-AIR.xml  EncryptApp.mxml
wrappers/asmjs/: CMakeLists.txt  error.js  example.html  helpers.js  patch_embind.pl  wrapper.cxx
wrappers/csharp/: AssemblyInfo.cs.in  CMakeLists.txt
wrappers/emscripten/: CMakeLists.txt  example.html  helpers.js  wrapper.cxx
wrappers/emsdk/: CMakeLists.txt  error.js  example.html  helpers.js  patch_embind.pl  wrapper.cxx
wrappers/go/: CMakeLists.txt
wrappers/java/: CMakeLists.txt
wrappers/javascript/: CMakeLists.txt  binding.gyp.in
wrappers/js/: CMakeLists.txt
wrappers/net/: CMakeLists.txt
wrappers/net/src/: KeyPair.cs  (+17 more)
wrappers/nodejs/: CMakeLists.txt  checksum.txt  load_checksum.py
wrappers/php/: CMakeLists.txt
wrappers/python/: CMakeLists.txt
wrappers/ruby/: CMakeLists.txt
wrappers/swig/: common.i  util.i  wrapper.i.in
wrappers/webasm/: CMakeLists.txt
(+3909 files in other folders)
